<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings">

        <menu>

            <item
                android:id="@+id/user_profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_account_circle_24"
                app:showAsAction="never" />

            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_exit_to_app_24"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>