<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feed.ScheduledFeedActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/black"
        android:fontFamily="@font/rubikmedium"
        android:textSize="24sp"
        android:layout_gravity="start"
        android:paddingTop="20dp"
        android:paddingHorizontal="18dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/input_container_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/day_input_container_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_feed_input_container"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/rubikregular" />

                <RadioGroup
                    android:id="@+id/rg_day_schedule"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_mon_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="2dp"
                        android:background="@drawable/custom_orange_radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/monday_abv" />

                    <RadioButton
                        android:id="@+id/rb_tue_schedule"
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/tuesday_abv"
                        android:background="@drawable/custom_orange_radio_selector"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:button="@android:color/transparent" />

                    <RadioButton
                        android:id="@+id/rb_wed_schedule"
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/wednesday_abv"
                        android:background="@drawable/custom_orange_radio_selector"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:button="@android:color/transparent" />

                    <RadioButton
                        android:id="@+id/rb_thu_schedule"
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/custom_orange_radio_selector"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/thursday_abv" />

                    <RadioButton
                        android:id="@+id/rb_fri_schedule"
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/custom_orange_radio_selector"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/friday_abv" />

                    <RadioButton
                        android:id="@+id/rb_sun_schedule"
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/custom_orange_radio_selector"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/saturday_abv" />

                    <RadioButton
                        android:layout_margin="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:button="@android:color/transparent"
                        android:background="@drawable/custom_orange_radio_selector"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/sunday_abv" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_feed_input_container"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/rubikregular" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <NumberPicker
                        android:id="@+id/np_hour_schedule"
                        android:theme="@style/Theme.PetFeeder.Picker"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/gray" />

                    <NumberPicker
                        android:id="@+id/np_minute_schedule"
                        android:theme="@style/Theme.PetFeeder.Picker"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <NumberPicker
                        android:id="@+id/np_am_pm_schedule"
                        android:theme="@style/Theme.PetFeeder.Picker"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/custom_feed_input_container"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/servings"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/rubikregular" />

                <NumberPicker
                    android:id="@+id/np_servings_schedule"
                    android:theme="@style/Theme.PetFeeder.Picker"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_white_button_active"
                    android:fontFamily="@font/rubikbold"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_blue_button_active"
                    android:fontFamily="@font/rubikbold"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>