<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.devices.AddNewDeviceActivity"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_device"
        android:textColor="@color/black"
        android:fontFamily="@font/rubikmedium"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_feed_input_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/device_petfeeder"
            android:contentDescription="@string/device_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_device_name_add_device"
                tools:text="PetFeeder1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_wi_fi_information"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rubikbold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_wifi_ssid"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:textColorHint="@color/gray"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:startIconDrawable="@drawable/ic_wifi_24"
        app:startIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_wifi_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/custom_register_edt"
            android:fontFamily="@font/rubikregular"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:hint="@string/enter_wi_fi_ssid"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_wifi_password"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray"
        android:textColorHint="@color/gray"
        app:helperTextTextColor="@android:color/holo_red_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_wifi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/custom_register_edt"
            android:fontFamily="@font/rubikregular"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:hint="@string/enter_wi_fi_password"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_add_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_white_button_active"
            android:fontFamily="@font/rubikbold"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginEnd="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_blue_button_active"
            android:fontFamily="@font/rubikbold"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>